[gd_scene load_steps=20 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/CharacterMover.gd" type="Script" id=2]
[ext_resource path="res://characters/player/WeaponManager.gd" type="Script" id=3]
[ext_resource path="res://Arms_M416_Assault_Rifle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Arms_Glock_G48.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/player/MachineGun.gd" type="Script" id=6]
[ext_resource path="res://characters/player/HitScanBulletEmitter.gd" type="Script" id=7]
[ext_resource path="res://effects/MuzzleFlash.gd" type="Script" id=8]
[ext_resource path="res://effects/raw_assets/muzzleflash1.glb" type="PackedScene" id=9]
[ext_resource path="res://sfx/pistolshot.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/pistolreload.wav" type="AudioStream" id=11]
[ext_resource path="res://enviornment/crt_shader.shader" type="Shader" id=12]
[ext_resource path="res://HealthManager.tscn" type="PackedScene" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.294487, -0.049571, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="PrismMesh" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 12 )
shader_param/screen_size = Vector2( 320, 180 )
shader_param/show_curvature = false
shader_param/curvature_x_amount = 4.54
shader_param/curvature_y_amount = 4.0
shader_param/corner_color = Color( 0, 0, 0, 0 )
shader_param/show_vignette = false
shader_param/vignette_opacity = 0.2
shader_param/show_horizontal_scan_lines = true
shader_param/horizontal_scan_lines_amount = 180.0
shader_param/horizontal_scan_lines_opacity = 0.36
shader_param/show_vertical_scan_lines = true
shader_param/vertical_scan_lines_amount = 320.0
shader_param/vertical_scan_lines_opacity = 0.01
shader_param/boost = 1.6
shader_param/aberration_amount = 0.45

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
collision_layer = 2147483654
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -1.42109e-14, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0.00147019, 0.12964, -1.00093 )
current = true
far = 2651.6

[node name="WeaponManager" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -1, 0 )
script = ExtResource( 3 )

[node name="Weapons" type="Spatial" parent="Camera/WeaponManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.519958, -0.617363, -0.375535 )

[node name="Machete" type="MeshInstance" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 0.103598, 0, 0, 0, 0.138176, 1.40393e-07, 0, 1.40393e-07, 0.999901, 0, -0.715169, -0.672252 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="MachineGun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 0.0778761, 0.0497226, 0.177378, -0.149026, -0.0962012, 0.0923949, 0.108291, -0.168146, -0.000409098, 0.418792, -0.288659, -0.511697 )
script = ExtResource( 6 )
damage = 30

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun"]

[node name="Arms_Glock_G48" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics" instance=ExtResource( 5 )]
transform = Transform( -1.52043, -2.81859, 3.83975, -1.22103, 4.12658, 2.54565, -4.60406, -0.163589, -1.94316, -3.93918, -3.51885, -1.69902 )

[node name="BulletEmitter" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics"]

[node name="HitScanBulletEmitter" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/BulletEmitter"]
script = ExtResource( 7 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics"]
transform = Transform( 0.576728, -0.278008, -3.90227e-08, 0.278008, 0.576728, -2.52144e-08, 4.61005e-08, 5.76787e-09, 0.640238, -2.67071, -1.80916, -1.8163 )
script = ExtResource( 8 )

[node name="muzzleflash1" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( -1.63004e-07, -7.45058e-09, 1.04424, 1.5099e-14, 1.00007, 2.98023e-08, -1.00051, 5.9952e-14, -1.70128e-07, 0.319266, 0.138086, -0.35767 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash"]
transform = Transform( 0.0780121, 0.776634, -7.77049, 0.776632, 7.73158, 0.780543, 7.77049, -0.780541, -3.47889e-07, 0, 0, 0 )
light_color = Color( 1, 0.792157, 0.498039, 1 )
light_energy = 2.09
omni_range = 8.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/MachineGun"]
playback_speed = 29.83
anims/Idle = SubResource( 3 )
anims/attack = SubResource( 4 )

[node name="GunshotSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/MachineGun"]
transform = Transform( 4.99998, 2.26498e-06, 4.52995e-06, 2.38419e-07, 4.99999, 1.78814e-06, 2.38419e-07, 3.57628e-07, 5, -1.88519, -1.20367, -4.29392 )
stream = ExtResource( 10 )
bus = "weapons"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/MachineGun"]
stream = ExtResource( 11 )
max_db = 5.442
bus = "weapons"

[node name="Shotgun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, -1.01604e-06, 0, 1.01604e-06, 1, 0, -0.715169, -0.672252 )
visible = false

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]

[node name="Arms_M416_Assault_Rifle" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics" instance=ExtResource( 4 )]
transform = Transform( -1, 2.26266e-08, -8.44439e-08, 8.44439e-08, -2.34126e-06, -1, -2.26268e-08, -1, 2.34126e-06, -0.241975, 1.04691, 0.346177 )

[node name="RockerLauncher" type="MeshInstance" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 0.520414, 0, 0, 0, 0.260071, 1.20534e-07, 0, 1.20534e-07, 0.999901, 0, -0.715169, -0.672252 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="FirePoint" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0248041 )

[node name="ColorRect" type="ColorRect" parent="Camera"]
material = SubResource( 6 )
anchor_right = 0.113
anchor_bottom = 0.137
margin_left = -10.5946
margin_top = -26.1189
margin_right = 1651.98
margin_bottom = 923.469
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterMover" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="HealthManager" parent="." instance=ExtResource( 13 )]
[connection signal="fired" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/GunshotSound" method="play"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" method="flash"]
[connection signal="reload" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/AudioStreamPlayer3D" method="play"]
